--- a/catalog/view/theme/default/zf_1.html
+++ b/catalog/view/theme/default/zf_1.html
@@ -213,8 +213,191 @@
 			</div>
 		</div>
 		<!--内容-->
-		<div class="content in_content zf_1  new_in_content">
+		<!--pc内容-->
+		<div class="address yd_hide clearfix">
+			<div class="content in_content address_content clearfix">
+				
+				<div class="left clearfix">
+					<div class="text clearfix">
+						
+						<div class="div_one clearfix">
+							<h2><span>1</span>Select the shipping address</h2>
+							<ul class="address_ul clearfix">
+
+								<li class="active clearfix">
+									<div class="text_li">
+										<span>LIUBIHUI</span>
+										<p>A lane in jiangxia village, baiyun districtA lane in jiangxia village, baiygxia village, baiyun district</p>
+										<p>guangzhou 510000</p>
+										<span>Guangdong</span>
+										<span>China</span>
+										<span>+2345601634559</span>
+										<a class="a_btn" href="###">Edit</a>
+										<a class="def" href="###">Default</a>
+									</div>
+								</li>
+
+								<li class="clearfix">
+									<div class="text_li">
+										<span>LIUBIHUI</span>
+										<p>Jiangxia, baiyun district, guangzhou, guangdong province.</p>
+										<p>guangzhou 510000</p>
+										<span>Guangdong</span>
+										<span>China</span>
+										<span>+2345601634559</span>
+										<a class="a_btn" href="###">Edit</a>
+										<a class="def" href="###">Default</a>
+									</div>
+								</li>
+								
+								<li class="clearfix">
+									<a class="add_a" href="###"><span>Add new address</span></a>
+								</li>
+								
+							</ul>
+						</div>
+						
+						<div class="div_two clearfix">
+							<h2>2.Select the Shipping Method</h2>
+							<ul class="express_ul">
+								<li class="clearfix">
+									<dl>
+										<dt>Shipping Method</dt>
+										<dd>
+											<label for="" class="dx_label">
+												<input class="check_input" type="checkbox" />
+												<i class="check_i"></i>
+											</label>
+											<span>Nigeria Local Express </span>
+										</dd>
+									</dl>
+									<dl>
+										<dt>Expected delivery time</dt>
+										<dd>
+											<span>2-3 Working Days</span>
+										</dd>
+									</dl>
+									<dl>
+										<dt>Shipping Cost</dt>
+										<dd>
+											<span>$0.00</span>
+										</dd>
+									</dl>
+								</li>
+								<li class="clearfix">
+									<dl>
+										<dt>Shipping Method</dt>
+										<dd class="kd">
+											<label for="" class="dx_label">
+												<input class="check_input" type="checkbox" />
+												<i class="check_i"></i>
+											</label>
+											<img src="img/jpg/kd_1.jpg"/>
+										</dd>
+										<dd class="kd">
+											<label for="" class="dx_label">
+												<input class="check_input" type="checkbox" />
+												<i class="check_i"></i>
+											</label>
+											<img src="img/jpg/kd_2.jpg"/>
+										</dd>
+									</dl>
+									<dl>
+										<dt>Expected delivery time</dt>
+										<dd>
+											<span>2-3 Working Days</span>
+										</dd>
+									</dl>
+									<dl>
+										<dt>Shipping Cost</dt>
+										<dd>
+											<span>$0.00</span>
+										</dd>
+									</dl>
+								</li>
+							</ul>
+						</div>
+						
+						
+						<a class="btn240" href="###">SAVE AND CONTINUE &nbsp;&nbsp;&nbsp;></a>
+					</div>
+					
+				</div>
 			
+				<div class="right right_shop clearfix">
+					<h2>SUMMARY</h2>
+					<ul class="cart_ul">
+						<li class="clearfix">
+							<a href="###">
+								<div class="pic_img">
+									<img src="img/jpg/index1_1.jpg"/>
+								</div>
+								<div class="text">
+									<h2>Fuller Peruvian Virgin Hair </h2>
+	 								<p>Body Wavy</p>
+	 								<span>$15.39</span>
+								</div>
+							</a>
+						</li>
+						<li class="clearfix">
+							<a href="###">
+								<div class="pic_img">
+									<img src=""/>
+								</div>
+								<div class="text">
+									<h2>Fuller Peruvian Virgin Hair  </h2>
+	 								<p>Body Wavy</p>
+	 								<span>$15.39</span>
+								</div>
+							</a>
+						</li>
+						<li class="clearfix">
+							<a href="###">
+								<div class="pic_img">
+									<img src=""/>
+								</div>
+								<div class="text">
+									<h2>Fuller Peruvian Virgin Hair  </h2>
+	 								<p>Body Wavy</p>
+	 								<span>$15.39</span>
+								</div>
+							</a>
+						</li>
+						<li class="clearfix">
+							<a href="###">
+								<div class="pic_img">
+									<img src=""/>
+								</div>
+								<div class="text">
+									<h2>Fuller Peruvian Virgin Hair  </h2>
+	 								<p>Body Wavy</p>
+	 								<span>$15.39</span>
+								</div>
+							</a>
+						</li>
+					</ul>
+					<p class="p1">Shipping <span class="fr">$70.00</span></p>
+					<p class="p2">Total <span class="fr">$70.00</span></p>
+					<div class="shop_search">
+						<p>
+							If you have coupons, please fill them out. If not, 
+							please pay.
+						</p>
+						<label for="">
+							<input type="text" placeholder="coupon code"/>
+							<button>CONFIRM</button>
+						</label>
+					</div>
+					<div class="btn">
+						
+					</div>
+				</div>
+			
+			</div>
+		</div>
+		
+		<!--移动内容1-->
+		<div class="content in_content zf_1 new_in_content clearfix pc_hide">
 			<div class="zf_con clearfix">
 				<div class="zfbt clearfix">
 					<span>1</span>
@@ -257,6 +440,92 @@
 				
 			</div>
 		</div>
+		<!--移动内容2-->
+		<div class="content in_content zf_21  new_in_content clearfix pc_hide ">
+			<div class="zf_con clearfix">
+				<div class="zfbt clearfix">
+					<span>2</span>
+					<h1>Shipping Method</h1>
+				</div>
+				
+				<ul class="pay_ul clearfix">
+					<li class=" clearfix">
+						<span>Shipping Method</span>
+						<label class="gx clearfix" for="">
+							<img src="img/png/new_9.png" alt="" />
+							<p>FEDEX EXPRESS 6  (Weight: 320.00g) </p>
+						</label>
+						<p class="ts_p">Please Select Shipping Method</p>
+						<hr />
+						<span>Expected delivery time</span>
+						<label class="clearfix" for="">
+							<p>2-3 Working Days (48-72 Hours)</p>
+						</label>
+						<hr />
+						<span>Shipping Cost</span>
+						<label class="red clearfix" for="">
+							<p>$24.00</p>
+						</label>
+					</li>
+					<li class="clearfix">
+						<span>Shipping Method</span>
+						<label class="gx clearfix" for="">
+							<img src="img/jpg/new.jpg" alt="" />
+							<p>DHL EXPRESS 6  (Weight: 320.00g) </p>
+						</label>
+						<p class="ts_p">Please Select Shipping Method</p>
+						<hr />
+						<span>Expected delivery time</span>
+						<label class="clearfix" for="">
+							<p>2-3 Working Days (48-72 Hours)</p>
+						</label>
+						<hr />
+						<span>Shipping Cost</span>
+						<label class="red clearfix" for="">
+							<p>$24.00</p>
+						</label>
+					</li>
+				</ul>
+				
+				<a class="tj_a" href="###">SAVE & CONTINUE</a>
+				
+			</div>
+		</div>
+		<!--移动内容3-->
+		<div class="content in_content zf_22  new_in_content clearfix pc_hide">
+			<div class="zf_con clearfix">
+				<div class="zfbt clearfix">
+					<span>2</span>
+					<h1>Shipping Method</h1>
+				</div>
+				
+				<ul class="pay_ul clearfix">
+					<li class="active clearfix">
+						<hr />
+						<span>Shipping Method</span>
+						<label class="gx clearfix" for="">
+							<p>Nigeria Local Express  (Weight: 320.00g)  </p>
+						</label>
+						<hr />
+						<span>Expected delivery time</span>
+						<label class="clearfix" for="">
+							<p>2 to 4 working days</p>
+						</label>
+						<hr />
+						<span>Shipping Cost</span>
+						<label class=" clearfix" for="">
+							<p>Shipping cost will be paid by buyer when collect goods from shipping agent.</p>
+						</label>
+						<hr />
+					</li>
+				</ul>
+				
+				<a class="tj_a" href="###">SAVE & CONTINUE</a>
+				
+			</div>
+		</div>
+		
+		
 		
 		<!--返回顶部-->
 		<div class="xf_right">
@@ -440,8 +709,35 @@
 </html>
 <script type="text/javascript">
 	$(function(){
+//		yd选择支付地址
 		$(".zf_1 .zf_1_ol>li").click(function(){
 			$(this).addClass("active").siblings().removeClass("active");
 		})
+		
+//		pc选择支付地址
+		$(".address_ul>li").click(function(){
+			let li_len = $(".address_ul>li").length;
+			if($(this).index()+1 != li_len){
+				$(this).addClass("active").siblings("li").removeClass("active");
+			}
+		})
+		
+		//点击下一步操作按钮
+		$(".address_content .btn240").click(function(){
+			
+			//展开第二步操作的内容
+			$(".div_two").slideDown();
+		})
+		
+		//第二步操作的单选
+		$(".dx_label input").click(function(){
+			if($(this).prop("checked")){
+				$(this).siblings(".check_i").addClass("active");
+				
+			}else{
+				$(this).siblings(".check_i").removeClass("active");
+			}
+		})
+		
 	})
 </script>
