--- a/catalog/view/theme/default/zf_bianji_dizhi.html
+++ b/catalog/view/theme/default/zf_bianji_dizhi.html
@@ -8,12 +8,12 @@
 		<link rel="stylesheet" href="css/index.css" />
 		<script type="text/javascript" src="js/jquery.min.js" ></script>
 		<script type="text/javascript" src="js/common.js" ></script>
-		<title>Personal Center</title>
+		<title>EDIT SHIPPING ADDRESS</title>
 	</head>
 	<body>
 		<!--头部-->
 		<div class="big_nav">
-			<div class="nav content clearfix">
+			<div class="nav yd_hide content clearfix">
 				<!--货币切换-->
 				<div class="mn_type">
 					<div class="top clearfix">
@@ -207,180 +207,249 @@
 				
 			</div>
 		
+			<div class="new_nav pc_hide clearfix">
+				<a class="fh" href="###"></a>
+				<p>EDIT SHIPPING ADDRESS</p>
+			</div>
 		</div>
 		<!--内容-->
-		
-		<div class=" in_content peo_center my_vip">
-			<div class="content clearfix">
+		<!--pc内容-->
+		<div class="address add yd_hide clearfix">
+			<div class="content in_content address_content clearfix">
 				
 				<div class="left clearfix">
-					<h1>MY ACCOUNT</h1>
-					<ol>
-						<li class="active"><a href="###">My Orders</a></li>
-						<li><a href="###">Account Information</a></li>
-						<li><a href="###">Address List</a></li>
-						<li><a href="###">My Shopping Cart</a></li>
-						<li><a href="###">My Wish List</a></li>
-						<li><a href="###">My VIP</a></li>
-						<li><a href="###">My Coupon</a></li>
-						<li><a href="###">Help Center</a></li>
-						<li><a href="###">Logout </a></li>
-					</ol>
-				</div>
-				
-				<div class="right m_vip clearfix">
-					<div class="bnr_img">
-						<img class="changeimage" data-image='img/jpg/pc_vip.jpg' data-mimage='img/jpg/yd_vip.jpg'  />
-						<img class="vip_img" src="img/png/vip1.png"/>
-						<p class="p1">Your VIP level:VIP</p>
-						<p class="p2">Dear XXX, Welcome to Hot Beauty VIP Club.</p>
-					</div>
-					
-					<div class="text_1 clearfix">
-						<h1 class="vip_h1">VIP SYSTEM</h1>
-						<div class="pic clearfix" style="position: relative;">
-							<img src="img/jpg/vip1.jpg"/>
-							<span class="span1">$0</span>
-							<span class="span2">$20000</span>
-							<span class="span3">$50000</span>
-							<span class="span4">$100000</span>
+					<div class="text  clearfix">
+						<div class="bg_fff">
+							<div class="del_address">
+								<p class="form_p">* Required fields</p>
+								<div class="del pc clearfix">
+									<svg t="1539766974948" class="icon" viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" p-id="5269" xmlns:xlink="http://www.w3.org/1999/xlink" width="32" height="32">
+										<path d="M793.6 998.4H220.16c-51.2 0-97.28-40.96-97.28-97.28V261.12c0-15.36 10.24-25.6 25.6-25.6s25.6 10.24 25.6 25.6v645.12c0 25.6 20.48 46.08 46.08 46.08h573.44c25.6 0 46.08-20.48 46.08-46.08v-563.2c0-15.36 10.24-25.6 25.6-25.6s25.6 10.24 25.6 25.6v563.2c0 46.08-46.08 92.16-97.28 92.16z" p-id="5270" fill="#333"></path>
+										<path d="M51.2 266.24c-10.24 0-20.48-10.24-25.6-25.6 0-15.36 10.24-25.6 25.6-25.6l916.48-81.92c15.36 0 25.6 10.24 25.6 25.6s-10.24 25.6-25.6 25.6L51.2 266.24c5.12 0 0 0 0 0z" p-id="5271" fill="#333"></path>
+										<path d="M343.04 230.4c-10.24 0-20.48-10.24-25.6-25.6l-5.12-76.8C307.2 87.04 337.92 51.2 378.88 46.08l225.28-20.48c20.48 0 40.96 5.12 56.32 15.36 15.36 10.24 25.6 30.72 25.6 51.2l5.12 81.92c0 15.36-10.24 25.6-25.6 25.6s-25.6-10.24-25.6-25.6l-5.12-81.92c0-10.24-10.24-20.48-25.6-20.48l-225.28 25.6c-5.12 0-10.24 5.12-15.36 10.24-5.12 0-5.12 10.24-5.12 15.36L368.64 204.8c0 10.24-10.24 25.6-25.6 25.6 5.12 0 0 0 0 0zM435.2 768c-15.36 0-25.6-15.36-25.6-30.72V399.36c0-15.36 10.24-40.96 25.6-40.96s25.6 25.6 25.6 35.84v337.92c0 15.36-10.24 35.84-25.6 35.84zM588.8 768c-15.36 0-25.6-15.36-25.6-30.72V465.92c0-15.36 10.24-25.6 25.6-25.6s25.6 10.24 25.6 25.6v271.36c0 15.36-10.24 30.72-25.6 30.72z" p-id="5272" fill="#333"></path>
+									</svg>	
+								</div>
+							</div>
+							<form class="add_form clearfix">
+								<label for="">
+									<span>Frist Name *</span>
+									<input type="text" />
+									<p class="ts_ps">This field is required</p>
+								</label>
+								<label for="">
+									<span>Last Name *</span>
+									<input type="text" />
+									<p class="ts_ps">This field is required</p>
+								</label>
+								<label class="add_label" for="">
+									<span>Address *</span>
+									<input type="text" />
+									<input type="text" />
+									<p class="ts_ps">This field is required</p>
+								</label>
+								
+								<label for="">
+									<span>Country *</span>
+									<select name="">
+										<option value="">Country</option>
+										<option value="">Country</option>
+										<option value="">Country</option>
+										<option value="">Country</option>
+									</select>
+									<p class="ts_ps">This field is required</p>
+								</label>
+								<label for="">
+									<span>Post Code *</span>
+									<input type="text" />
+									<p class="ts_ps">This field is required</p>
+								</label>
+								<label for="">
+									<span>City *</span>
+									<input type="text" />
+									<p class="ts_ps">This field is required</p>
+								</label>
+								<label for="">
+									<span>State *</span>
+									<select name="">
+										<option value="">Select State</option>
+										<option value="">Select State</option>
+										<option value="">Select State</option>
+										<option value="">Select State</option>
+									</select>
+									<p class="ts_ps">This field is required</p>
+								</label>
+								<label for="">
+									<span>Phone *</span>
+									<input type="text" />
+									<p class="ts_ps">This field is required</p>
+								</label>
+								<button class="qx_btn" type="reset">cancel</button>
+								
+								<a class="btn240 clearfix clear" href="###">SAVE ADDRESS&nbsp;&nbsp;&nbsp;></a>
+							</form>
 						</div>
+						
 					</div>
-					
-					<div class="text_2 clearfix">
-						<h1 class="vip_h1">ORDER RECORD</h1>
-						<ul>
-							<li>
-								<span>Orders</span>
-								<span>Accumulated Amount</span>
-								<span>Amount Away From Next Level</span>
+				</div>
+			
+				<div class="right right_shop clearfix">
+					<div class="bg_fff">
+						<h2>SUMMARY</h2>
+						<ul class="cart_ul">
+							<li class="clearfix">
+								<a href="###">
+									<div class="pic_img">
+										<img src="img/jpg/index1_1.jpg"/>
+									</div>
+									<div class="text">
+										<h2>Fuller Peruvian Virgin Hair </h2>
+		 								<p>Body Wavy</p>
+		 								<span>$15.39</span>
+									</div>
+								</a>
 							</li>
-							<li>
-								<span>0</span>
-								<span>$0.00</span>
-								<span>$500</span>
+							<li class="clearfix">
+								<a href="###">
+									<div class="pic_img">
+										<img src=""/>
+									</div>
+									<div class="text">
+										<h2>Fuller Peruvian Virgin Hair  </h2>
+		 								<p>Body Wavy</p>
+		 								<span>$15.39</span>
+									</div>
+								</a>
+							</li>
+							<li class="clearfix">
+								<a href="###">
+									<div class="pic_img">
+										<img src=""/>
+									</div>
+									<div class="text">
+										<h2>Fuller Peruvian Virgin Hair  </h2>
+		 								<p>Body Wavy</p>
+		 								<span>$15.39</span>
+									</div>
+								</a>
+							</li>
+							<li class="clearfix">
+								<a href="###">
+									<div class="pic_img">
+										<img src=""/>
+									</div>
+									<div class="text">
+										<h2>Fuller Peruvian Virgin Hair  </h2>
+		 								<p>Body Wavy</p>
+		 								<span>$15.39</span>
+									</div>
+								</a>
 							</li>
 						</ul>
-					</div>
-					
-					<div class="text_3 clearfix">
-						<h1 class="vip_h1">VIP MEMBER BENEFITS</h1>
-						<ul>
-							<li>
-								<span>Your Accumulated Amount</span>
-								<span>$0</span>
-								<span>$500</span>
-								<span>$5000</span>
-								<span>$10000</span>
-							</li>
-							<li>
-								<span>VIP Grade Benifits</span>
-								<span>VIP</span>
-								<span>Silver VIP</span>
-								<span>Gold VIP</span>
-								<span>Diamond VIP</span>
-							</li>
-							<li>
-								<span>20% Price Off</span>
-								<span class="active"></span>
-								<span class="active"></span>
-								<span class="active"></span>
-								<span class="active"></span>
-							</li>
-							<li>
-								<span>Upgrade Discount Price</span>
-								<span></span>
-								<span class="active"></span>
-								<span class="active"></span>
-								<span class="active"></span>
-							</li>
-							<li>
-								<span>Free Label Design</span>
-								<span></span>
-								<span class="active"></span>
-								<span class="active"></span>
-								<span class="active"></span>
-							</li>
-							<li>
-								<span>1000pcs Free Label</span>
-								<span></span>
-								<span></span>
-								<span class="active"></span>
-								<span class="active"></span>
-							</li>
-							<li>
-								<span>3000pcs Free Label</span>
-								<span></span>
-								<span></span>
-								<span></span>
-								<span class="active"></span>
-							</li>
-							<li>
-								<span>First Order Coupon $10</span>
-								<span class="active"></span>
-								<span class="active"></span>
-								<span class="active"></span>
-								<span class="active"></span>
-							</li>
-							<li>
-								<span>Upgrade Gifts</span>
-								<span></span>
-								<span class="active"></span>
-								<span class="active"></span>
-								<span class="active"></span>
-							</li>
-						</ul>
-					</div>
-					
-					<div class="text_4 clearfix">
-						<div class="div_text">
-							<p>Notes: </p>
-							<p>We will also offer you an upgrade gifts when you reached the certain level.</p>
-						
-							<ul>
-								<li>
-									<span>Silver VIP</span>
-									<span>1 free 4*4 Closure 10”</span>
-								</li>
-								<li>
-									<span>Gold VIP</span>
-									<span>2 free 4*4 Closure 12” or  1 free ear to ear 4*13 frontal</span>
-								</li>
-								<li>
-									<span>Diamond VIP</span>
-									<span>3 Bundles of 18” free Hair + 1 Free 4*4 Closure/frontal 14”or 1 free wig</span>
-								</li>
-							</ul>
+						<p class="p1">Shipping <span class="fr">$70.00</span></p>
+						<p class="p2">Total <span class="fr">$70.00</span></p>
+						<div class="shop_search">
+							<p>
+								If you have coupons, please fill them out. If not, 
+								please pay.
+							</p>
+							<label for="">
+								<input type="text" placeholder="coupon code"/>
+								<button>CONFIRM</button>
+							</label>
+						</div>
+						<div class="btn">
 						</div>
 					</div>
-					
-					<div class="text_5 clearfix">
-						<div class="div_text">
-							<h1 class="vip_h1">HOW DOES HOT BEAUTY HAIR'S VIP PROGRAM WORKS?</h1>
-						
-							<p class="p1_text">
-								Hot Beauty Hair's VIP program includes 4 stages and each stage will enjoy different price discount. Our system has 
-								the record of purchase history and we can calculate your VIP level according to how much you have spent.
-							</p>
-							<ul>
-								<li><p><span>• VIP:</span> Register to get account.</p></li>
-								<li><p><span>• Silver VIP:</span> Accumulative spent over $500.</p></li>
-								<li><p><span>• Gold VIP:</span> Accumulative spent among $5,000.</p></li>
-								<li><p><span>• Diamond VIP:</span> Accumulative spent over $10,000.</p></li>
-							</ul>
-							<p class="p2_text">
-								<span>Notes:</span>
-								<span>if you have any questions,do not hesitate to send us an email to rebecca@hotbeautyhair.com.</span>
-							</p>
-						</div>
-					</div>
-					
 				</div>
-				
+			
 			</div>
-			
-			
 		</div>
+		
+		<!--yd内容-->
+		<div class="content in_content zf_13 new_in_content clearfix pc_hide">
+			
+			<div class="zf_con clearfix">
+				<div class="zfbt clearfix">
+					<span>1</span>
+					<h1>Shipping Address</h1>
+					<div class="del clearfix">
+						<svg t="1539766974948" class="icon" viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" p-id="5269" xmlns:xlink="http://www.w3.org/1999/xlink" width="32" height="32">
+							<path d="M793.6 998.4H220.16c-51.2 0-97.28-40.96-97.28-97.28V261.12c0-15.36 10.24-25.6 25.6-25.6s25.6 10.24 25.6 25.6v645.12c0 25.6 20.48 46.08 46.08 46.08h573.44c25.6 0 46.08-20.48 46.08-46.08v-563.2c0-15.36 10.24-25.6 25.6-25.6s25.6 10.24 25.6 25.6v563.2c0 46.08-46.08 92.16-97.28 92.16z" p-id="5270" fill="#333"></path>
+							<path d="M51.2 266.24c-10.24 0-20.48-10.24-25.6-25.6 0-15.36 10.24-25.6 25.6-25.6l916.48-81.92c15.36 0 25.6 10.24 25.6 25.6s-10.24 25.6-25.6 25.6L51.2 266.24c5.12 0 0 0 0 0z" p-id="5271" fill="#333"></path>
+							<path d="M343.04 230.4c-10.24 0-20.48-10.24-25.6-25.6l-5.12-76.8C307.2 87.04 337.92 51.2 378.88 46.08l225.28-20.48c20.48 0 40.96 5.12 56.32 15.36 15.36 10.24 25.6 30.72 25.6 51.2l5.12 81.92c0 15.36-10.24 25.6-25.6 25.6s-25.6-10.24-25.6-25.6l-5.12-81.92c0-10.24-10.24-20.48-25.6-20.48l-225.28 25.6c-5.12 0-10.24 5.12-15.36 10.24-5.12 0-5.12 10.24-5.12 15.36L368.64 204.8c0 10.24-10.24 25.6-25.6 25.6 5.12 0 0 0 0 0zM435.2 768c-15.36 0-25.6-15.36-25.6-30.72V399.36c0-15.36 10.24-40.96 25.6-40.96s25.6 25.6 25.6 35.84v337.92c0 15.36-10.24 35.84-25.6 35.84zM588.8 768c-15.36 0-25.6-15.36-25.6-30.72V465.92c0-15.36 10.24-25.6 25.6-25.6s25.6 10.24 25.6 25.6v271.36c0 15.36-10.24 30.72-25.6 30.72z" p-id="5272" fill="#333"></path>
+						</svg>	
+					</div>
+				</div>
+				
+				<form method="post">
+					<div class="form_div">
+						<label class="true clearfix" for="">
+							<em class="gx"></em>
+							<input type="text" value="BIHUI"/>
+							<p class="ts_ps">please enter your  </p>
+						</label>
+						<label class="clearfix" for="">
+							<input type="text" value="Last Name"/>
+							<p class="ts_ps off">please enter your Last Name</p>
+						</label>
+						<label class="clearfix" for="">
+							<input type="text" value="Address1"/>
+							<p class="ts_ps">please enter your Last Name</p>
+						</label>
+						<label class="clearfix" for="">
+							<input type="text" value="Address2"/>
+							<p class="ts_ps">please enter your Last Name</p>
+						</label>
+						<label class="w_48 fl clearfix" for="">
+							<input type="text" value="City"/>
+							<p class="ts_ps">please enter your Last Name</p>
+						</label>
+						<label class="w_48 fr clearfix" for="">
+							<input type="text" value="Post Code"/>
+							<p class="ts_ps">please enter your Last Name</p>
+						</label>
+						<label class="w_48 fl clearfix" for="">
+							<select name="">
+								<option value="">State</option>
+								<option value="">State2</option>
+								<option value="">State3</option>
+								<option value="">State4</option>
+							</select>
+							<p class="ts_ps">please enter your Last Name</p>
+						</label>
+						<label class="w_48 fr clearfix" for="">
+							<select name="">
+								<option value="">Country</option>
+								<option value="">Country2</option>
+								<option value="">Country3</option>
+								<option value="">Country4</option>
+							</select>
+							<p class="ts_ps">please enter your Last Name</p>
+						</label>
+						<label class="clearfix" for="">
+							<input type="text" value="+2345601634559"/>
+							<p class="ts_ps">please enter your Last Name</p>
+						</label>
+						<div class="def_kg clearfix">
+							<p>Set default address</p>
+							<span class="kg "></span>
+						</div>
+						<input class="tj_a" type="submit" value="SAVE"/>
+					</div>
+				</form>
+			</div>
+		</div>
+		
+	 	<!--弹窗确定取消-->
+	 	<div class="choice_tc clearfix ">
+	 		<div class="text">
+	 			<p><span>Are you sure?</span></p>
+	 			<div class="btn">
+	 				<button class="qd_btn">Yes</button>
+	 				<button class="qx_btn">No</button>
+	 			</div>
+	 		</div>
+	 	</div>
 		
 		<!--返回顶部-->
 		<div class="xf_right">
@@ -445,7 +514,7 @@
 		</div>
 		
 		<!--yd底部-->
-		<div class="yd_footer clearfix">
+		<div class="yd_footer hide clearfix">
 			<div class="top">
 				<ul class="ul_ydfot clearfix">
 					<li>
@@ -515,7 +584,7 @@
 			</div>
 			<p class="clearfix">Copyright Notice &copy; 2016-2018 www.hotbeautyhairmall.com All rights reserved</p>
 		</div>
-		<div class="yd_footer2">
+		<div class="yd_footer2 hide">
 			<ol class="ol_ydfot clearfix">
 				<li class="active">
 					<a href="###">
@@ -562,4 +631,36 @@
 		
 	</body>
 </html>
-
+<script type="text/javascript">
+	$(function(){
+		$(".def_kg .kg").click(function(){
+			if($(this).hasClass("active")){
+				$(this).removeClass("active");
+			}else{
+				$(this).addClass("active");
+			}
+		})
+		
+		$(".del").click(function(){
+			$(".choice_tc").fadeIn();
+			$("body").css("overflow","hidden");
+		})
+		
+		$(".choice_tc .qx_btn").click(function(){
+			$(".choice_tc").fadeOut();
+			$("body").css("overflow","");
+		})
+		$(".choice_tc").click(function(e){
+			var close = $('.choice_tc .text'); 
+		   	if(!close.is(e.target) && close.has(e.target).length === 0){
+		   		$(".choice_tc").fadeOut();
+		   		$("body").css("overflow","");
+			}
+		})
+		$(".choice_tc .qd_btn").click(function(){
+			$(".choice_tc").fadeOut();
+			$("body").css("overflow","");
+			location.href="http://www.baidu.com";
+		})
+	})
+</script>
