--- a/catalog/view/theme/default/index.html
+++ b/catalog/view/theme/default/index.html
@@ -4,13 +4,26 @@
 		<meta charset="UTF-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+		<meta name="google-translate-customization" content="108d9124921d80c3-80e20d618ff053c8-g4f02ec6f3dba68b7-c">
 		<link rel="stylesheet" href="css/common.css" />
+		<link rel="stylesheet" href="css/ttf.css" />
 		<link rel="stylesheet" href="css/index.css" />
 		<link rel="stylesheet" href="css/swiper.min.css" />
 		<script type="text/javascript" src="js/jquery.min.js" ></script>
+		
 		<script type="text/javascript" src="js/common.js" ></script>
 		<script type="text/javascript" src="js/swiper.js" ></script>
 		<title>HOME</title>
+		
+		
+<script type="text/javascript">
+function googleTranslateElementInit() {
+new google.translate.TranslateElement({pageLanguage: 'en'}, 'google_translate_element');
+}
+</script>
+<script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"> </script>	
+		
+
 	</head>
 	<body>
 		<!--头部-->
@@ -33,6 +46,7 @@
 							<li><a href="###">ZAR</a></li>
 						</ul>
 					</div>
+					<div id="google_translate_element"></div>
 				</div>
 				
 				<!--logo-->
@@ -291,10 +305,14 @@
 					</li>
 				</ul>
 				
-				<div class="bt2">
+				<div class="bt2 pc_hide">
 					<h1>One Donor Raw Brazilian Hair</h1>
 				</div>
 				<div class="top video_top clearfix">
+					<div class="bt2 yd_hide">
+						<h1>One Donor Raw Brazilian Hair</h1>
+						<a href="http://o.luvmewig.com/virgin_brazilian_hair.html" class="a_btn mr_b_no">VIEW MORE &nbsp;&nbsp;&gt;<span class="triangle"><em></em></span></a>
+					</div>
 					<div class="video_div">
 						<video id="video" class="video"  poster="img/jpg/video_bg.jpg" src="img/myvideo.mp4" ></video>
 						<div class="bg_div"></div>
@@ -302,9 +320,9 @@
 				</div>
 				
 				<div class="div clearfix">
-					<div class="bt2">
+					<!--<div class="bt2 pc_hide">
 						<h1>One Donor Raw Brazilian Hair</h1>
-					</div>
+					</div>-->
 					<ol class="ol_img2 ol_img clearfix">
 						<li>
 							<a href="###">
@@ -343,15 +361,22 @@
 							</a>
 						</li>
 					</ol>
-					<div class="bot_btn">
+					<div class="bot_btn pc_hide">
 						<a href="###" class="a_btn">VIEW MORE</a>
 					</div>
+					<!--<div class="bt2 yd_hide" style="width: 100%;padding: 0;margin:0 0 5.62vw 0;background: transparent;">
+                        <a href="###" class="a_btn" style="margin: 2.8vw auto 0 auto;">VIEW MORE &nbsp;&nbsp;&gt;<span class="triangle"><em></em></span></a>
+                    </div>-->
+					
 				</div>
 				
 				<div class="div clearfix">
 					<div class="top top2 clearfix">
 						<div class="bt2">
 							<h1>Fuller Virgin  Peruvian Hair</h1>
+							<div class="bt2 yd_hide" style="width: 100%;padding: 0;margin:0 0 5.62vw 0;background: transparent;">
+		                        <a href="###" class="a_btn" style="margin: 2.8vw auto 0 auto;">VIEW MORE &nbsp;&nbsp;&gt;<span class="triangle"><em></em></span></a>
+		                    </div>
 						</div>
 						<img class="top2_img changeimage" data-image='img/jpg/pc_index3.jpg' data-mimage='img/jpg/yd_index3.jpg'  />
 					</div>
@@ -405,14 +430,18 @@
 							</a>
 						</li>
 					</ol>
-					<div class="bot_btn">
+					<div class="bot_btn pc_hide">
 						<a href="###" class="a_btn">VIEW MORE</a>
 					</div>
+					
 				</div>
 				<div class="div clearfix">
 					<div class="top top3 clearfix">
 						<div class="bt2">
 							<h1>Regular Virgin Peruvian Hair</h1>
+							<div class="bt2 yd_hide" style="width: 100%;padding: 0;background: transparent;">
+		                        <a href="###" class="a_btn" style="margin: 2.8vw auto 0 auto;">VIEW MORE &nbsp;&nbsp;&gt;<span class="triangle"><em></em></span></a>
+		                    </div>
 						</div>
 						<img class="top3_img changeimage" data-image='img/jpg/pc_index4.jpg' data-mimage='img/jpg/yd_index4.jpg'  />
 						<ol class="ol_img4 ol_img clearfix">
@@ -466,9 +495,10 @@
 							</li>
 						</ol>
 					
-						<div class="bot_btn">
+						<div class="bot_btn pc_hide">
 							<a href="###" class="a_btn">VIEW MORE</a>
 						</div>
+						
 					</div>
 				</div>
 			</div>
@@ -547,9 +577,12 @@
 						</li>
 					</ol>
 				
-					<div class="bot_btn">
+					<div class="bot_btn pc_hide">
 						<a href="###" class="a_btn">VIEW MORE</a>
-					</div>			
+					</div>	
+					<div class="bt2 yd_hide" style="width: 100%;padding: 0;background: transparent;">
+                        <a href="###" class="a_btn" style="margin: 2.8vw auto 0 auto;">VIEW MORE &nbsp;&nbsp;&gt;<span class="triangle"><em></em></span></a>
+                    </div>
 				</div>
 			
 			</div>
@@ -930,6 +963,9 @@
 		</div>
 	
 		
+		
+
+
 	</body>
 </html>
 
@@ -1020,4 +1056,5 @@
 	
 	
 </script>
-		
+	
+
