--- a/catalog/view/theme/default/x_address.html
+++ b/catalog/view/theme/default/x_address.html
@@ -8,7 +8,7 @@
 		<link rel="stylesheet" href="css/index.css" />
 		<script type="text/javascript" src="js/jquery.min.js" ></script>
 		<script type="text/javascript" src="js/common.js" ></script>
-		<title>Personal Center</title>
+		<title>ADDRESS</title>
 	</head>
 	<body>
 		<!--头部-->
@@ -209,179 +209,181 @@
 		
 		</div>
 		<!--内容-->
-		
-		<div class=" in_content peo_center my_vip">
-			<div class="content clearfix">
+		<div class="address clearfix">
+			<div class="content in_content address_content clearfix">
 				
 				<div class="left clearfix">
-					<h1>MY ACCOUNT</h1>
-					<ol>
-						<li class="active"><a href="###">My Orders</a></li>
-						<li><a href="###">Account Information</a></li>
-						<li><a href="###">Address List</a></li>
-						<li><a href="###">My Shopping Cart</a></li>
-						<li><a href="###">My Wish List</a></li>
-						<li><a href="###">My VIP</a></li>
-						<li><a href="###">My Coupon</a></li>
-						<li><a href="###">Help Center</a></li>
-						<li><a href="###">Logout </a></li>
-					</ol>
-				</div>
-				
-				<div class="right m_vip clearfix">
-					<div class="bnr_img">
-						<img class="changeimage" data-image='img/jpg/pc_vip.jpg' data-mimage='img/jpg/yd_vip.jpg'  />
-						<img class="vip_img" src="img/png/vip1.png"/>
-						<p class="p1">Your VIP level:VIP</p>
-						<p class="p2">Dear XXX, Welcome to Hot Beauty VIP Club.</p>
-					</div>
-					
-					<div class="text_1 clearfix">
-						<h1 class="vip_h1">VIP SYSTEM</h1>
-						<div class="pic clearfix" style="position: relative;">
-							<img src="img/jpg/vip1.jpg"/>
-							<span class="span1">$0</span>
-							<span class="span2">$20000</span>
-							<span class="span3">$50000</span>
-							<span class="span4">$100000</span>
-						</div>
-					</div>
-					
-					<div class="text_2 clearfix">
-						<h1 class="vip_h1">ORDER RECORD</h1>
-						<ul>
-							<li>
-								<span>Orders</span>
-								<span>Accumulated Amount</span>
-								<span>Amount Away From Next Level</span>
+					<div class="text clearfix">
+						<h2><span>1</span>Select the shipping address</h2>
+						<ul class="address_ul clearfix">
+							<li class="active clearfix">
+								<span>LIUBIHUI</span>
+								<p>A lane in jiangxia village, baiyun districtA lane in jiangxia village, baiyun districtA lane in jiangxia village, baiyun districtA lane in jiangxia village, baiyun district</p>
+								<p>Guangzhou,Guangdong province</p>
+								<span>510000</span>
+								<span>China</span>
+								<a class="a_btn" href="###"></a>
+								<i></i>
+								<a class="go_btn" href="###">sent to this address&nbsp;&nbsp;&nbsp;></a>
 							</li>
-							<li>
-								<span>0</span>
-								<span>$0.00</span>
-								<span>$500</span>
+							<li class="clearfix">
+								<span>LIUBIHUI</span>
+								<p>A lane in jiangxia village, baiyun district</p>
+								<p>Guangzhou,Guangdong province</p>
+								<span>510000</span>
+								<span>China</span>
+								<a class="a_btn" href="###"></a>
+								<i></i>
+								<a class="go_btn" href="###">sent to this address&nbsp;&nbsp;&nbsp;></a>
+							</li>
+							<li class="clearfix">
+								<span>LIUBIHUI</span>
+								<p>A lane in jiangxia village, baiyun district</p>
+								<p>Guangzhou,Guangdong province</p>
+								<span>510000</span>
+								<span>China</span>
+								<a class="a_btn" href="###"></a>
+								<i></i>
+								<a class="go_btn" href="###">sent to this address&nbsp;&nbsp;&nbsp;></a>
 							</li>
 						</ul>
-					</div>
-					
-					<div class="text_3 clearfix">
-						<h1 class="vip_h1">VIP MEMBER BENEFITS</h1>
-						<ul>
-							<li>
-								<span>Your Accumulated Amount</span>
-								<span>$0</span>
-								<span>$500</span>
-								<span>$5000</span>
-								<span>$10000</span>
+						<a class="add_a" href="###">Add new address</a>
+						<h2>2.Select the Shipping Method</h2>
+						<ul class="express_ul">
+							<li class="clearfix">
+								<dl>
+									<dt>Shipping Method</dt>
+									<dd>
+										<label for="" class="dx_label">
+											<input class="check_input" type="checkbox" />
+											<i class="check_i"></i>
+										</label>
+										<span>Nigeria Local Express </span>
+									</dd>
+								</dl>
+								<dl>
+									<dt>Expected delivery time</dt>
+									<dd>
+										<span>2-3 Working Days</span>
+									</dd>
+								</dl>
+								<dl>
+									<dt>Shipping Cost</dt>
+									<dd>
+										<span>$0.00</span>
+									</dd>
+								</dl>
 							</li>
-							<li>
-								<span>VIP Grade Benifits</span>
-								<span>VIP</span>
-								<span>Silver VIP</span>
-								<span>Gold VIP</span>
-								<span>Diamond VIP</span>
-							</li>
-							<li>
-								<span>20% Price Off</span>
-								<span class="active"></span>
-								<span class="active"></span>
-								<span class="active"></span>
-								<span class="active"></span>
-							</li>
-							<li>
-								<span>Upgrade Discount Price</span>
-								<span></span>
-								<span class="active"></span>
-								<span class="active"></span>
-								<span class="active"></span>
-							</li>
-							<li>
-								<span>Free Label Design</span>
-								<span></span>
-								<span class="active"></span>
-								<span class="active"></span>
-								<span class="active"></span>
-							</li>
-							<li>
-								<span>1000pcs Free Label</span>
-								<span></span>
-								<span></span>
-								<span class="active"></span>
-								<span class="active"></span>
-							</li>
-							<li>
-								<span>3000pcs Free Label</span>
-								<span></span>
-								<span></span>
-								<span></span>
-								<span class="active"></span>
-							</li>
-							<li>
-								<span>First Order Coupon $10</span>
-								<span class="active"></span>
-								<span class="active"></span>
-								<span class="active"></span>
-								<span class="active"></span>
-							</li>
-							<li>
-								<span>Upgrade Gifts</span>
-								<span></span>
-								<span class="active"></span>
-								<span class="active"></span>
-								<span class="active"></span>
+							<li class="clearfix">
+								<dl>
+									<dt>Shipping Method</dt>
+									<dd class="kd">
+										<label for="" class="dx_label">
+											<input class="check_input" type="checkbox" />
+											<i class="check_i"></i>
+										</label>
+										<img src="img/jpg/kd_1.jpg"/>
+									</dd>
+									<dd class="kd">
+										<label for="" class="dx_label">
+											<input class="check_input" type="checkbox" />
+											<i class="check_i"></i>
+										</label>
+										<img src="img/jpg/kd_2.jpg"/>
+									</dd>
+								</dl>
+								<dl>
+									<dt>Expected delivery time</dt>
+									<dd>
+										<span>2-3 Working Days</span>
+									</dd>
+								</dl>
+								<dl>
+									<dt>Shipping Cost</dt>
+									<dd>
+										<span>$0.00</span>
+									</dd>
+								</dl>
 							</li>
 						</ul>
-					</div>
-					
-					<div class="text_4 clearfix">
-						<div class="div_text">
-							<p>Notes: </p>
-							<p>We will also offer you an upgrade gifts when you reached the certain level.</p>
-						
-							<ul>
-								<li>
-									<span>Silver VIP</span>
-									<span>1 free 4*4 Closure 10”</span>
-								</li>
-								<li>
-									<span>Gold VIP</span>
-									<span>2 free 4*4 Closure 12” or  1 free ear to ear 4*13 frontal</span>
-								</li>
-								<li>
-									<span>Diamond VIP</span>
-									<span>3 Bundles of 18” free Hair + 1 Free 4*4 Closure/frontal 14”or 1 free wig</span>
-								</li>
-							</ul>
-						</div>
-					</div>
-					
-					<div class="text_5 clearfix">
-						<div class="div_text">
-							<h1 class="vip_h1">HOW DOES HOT BEAUTY HAIR'S VIP PROGRAM WORKS?</h1>
-						
-							<p class="p1_text">
-								Hot Beauty Hair's VIP program includes 4 stages and each stage will enjoy different price discount. Our system has 
-								the record of purchase history and we can calculate your VIP level according to how much you have spent.
-							</p>
-							<ul>
-								<li><p><span>• VIP:</span> Register to get account.</p></li>
-								<li><p><span>• Silver VIP:</span> Accumulative spent over $500.</p></li>
-								<li><p><span>• Gold VIP:</span> Accumulative spent among $5,000.</p></li>
-								<li><p><span>• Diamond VIP:</span> Accumulative spent over $10,000.</p></li>
-							</ul>
-							<p class="p2_text">
-								<span>Notes:</span>
-								<span>if you have any questions,do not hesitate to send us an email to rebecca@hotbeautyhair.com.</span>
-							</p>
-						</div>
+						<a class="btn240" href="###">SAVE AND CONTINUE &nbsp;&nbsp;&nbsp;></a>
 					</div>
 					
 				</div>
-				
+			
+				<div class="right right_shop clearfix">
+					<h2>SUMMARY</h2>
+					<ul class="cart_ul">
+						<li class="clearfix">
+							<a href="###">
+								<div class="pic_img">
+									<img src="img/jpg/index1_1.jpg"/>
+								</div>
+								<div class="text">
+									<h2>Fuller Peruvian Virgin Hair </h2>
+	 								<p>Body Wavy</p>
+	 								<span>$15.39</span>
+								</div>
+							</a>
+						</li>
+						<li class="clearfix">
+							<a href="###">
+								<div class="pic_img">
+									<img src=""/>
+								</div>
+								<div class="text">
+									<h2>Fuller Peruvian Virgin Hair  </h2>
+	 								<p>Body Wavy</p>
+	 								<span>$15.39</span>
+								</div>
+							</a>
+						</li>
+						<li class="clearfix">
+							<a href="###">
+								<div class="pic_img">
+									<img src=""/>
+								</div>
+								<div class="text">
+									<h2>Fuller Peruvian Virgin Hair  </h2>
+	 								<p>Body Wavy</p>
+	 								<span>$15.39</span>
+								</div>
+							</a>
+						</li>
+						<li class="clearfix">
+							<a href="###">
+								<div class="pic_img">
+									<img src=""/>
+								</div>
+								<div class="text">
+									<h2>Fuller Peruvian Virgin Hair  </h2>
+	 								<p>Body Wavy</p>
+	 								<span>$15.39</span>
+								</div>
+							</a>
+						</li>
+					</ul>
+					<p class="p1">Shipping <span class="fr">$70.00</span></p>
+					<p class="p2">Total <span class="fr">$70.00</span></p>
+					<div class="shop_search">
+						<p>
+							If you have coupons, please fill them out. If not, 
+							please pay.
+						</p>
+						<label for="">
+							<input type="text" placeholder="coupon code"/>
+							<button>CONFIRM</button>
+						</label>
+					</div>
+					<div class="btn">
+						
+					</div>
+				</div>
+			
 			</div>
-			
-			
 		</div>
 		
+			
 		<!--返回顶部-->
 		<div class="xf_right">
 			<div class="vip"><a href="###"><span>VIP</span></a></div>
@@ -563,3 +565,26 @@
 	</body>
 </html>
 
+<script>
+	$(function(){
+		//单选
+		$(".dx_label input").click(function(){
+			if($(this).prop("checked")){
+				$(this).siblings(".check_i").addClass("active");
+				
+			}else{
+				$(this).siblings(".check_i").removeClass("active");
+			}
+		})
+		
+		$(".address_ul>li").click(function(){
+			$(this).addClass("active").siblings("li").removeClass("active");
+		})
+		
+		//搜索
+		$(".shop_search input").focus(function(){
+			$(".shop_search button").css("display","block");
+		})
+	})
+</script>
+		
