--- a/catalog/view/theme/default/x_address2.html
+++ b/catalog/view/theme/default/x_address2.html
@@ -8,7 +8,7 @@
 		<link rel="stylesheet" href="css/index.css" />
 		<script type="text/javascript" src="js/jquery.min.js" ></script>
 		<script type="text/javascript" src="js/common.js" ></script>
-		<title>Personal Center</title>
+		<title>ADDRESS2</title>
 	</head>
 	<body>
 		<!--头部-->
@@ -209,179 +209,200 @@
 		
 		</div>
 		<!--内容-->
-		
-		<div class=" in_content peo_center my_vip">
-			<div class="content clearfix">
+		<div class="address add clearfix">
+			<div class="content in_content address_content clearfix">
 				
 				<div class="left clearfix">
-					<h1>MY ACCOUNT</h1>
-					<ol>
-						<li class="active"><a href="###">My Orders</a></li>
-						<li><a href="###">Account Information</a></li>
-						<li><a href="###">Address List</a></li>
-						<li><a href="###">My Shopping Cart</a></li>
-						<li><a href="###">My Wish List</a></li>
-						<li><a href="###">My VIP</a></li>
-						<li><a href="###">My Coupon</a></li>
-						<li><a href="###">Help Center</a></li>
-						<li><a href="###">Logout </a></li>
+					<ol class="top_ol liucheng ol_1 clearfix">
+						<li>
+							<img src="img/png/express.png" alt="" />
+							<span></span>
+							<p>1.Shipping</p>
+							<em class="emr"></em>
+						</li>
+						<li>
+							<img src="img/png/express.png" alt="" />
+							<span></span>
+							<p>2.Payment</p>
+							<em class="eml"></em>
+							<em class="emr"></em>
+						</li>
+						<li>
+							<img src="img/png/express.png" alt="" />
+							<span></span>
+							<p>3.Deliver</p>
+							<em class="eml"></em>
+						</li>
 					</ol>
-				</div>
-				
-				<div class="right m_vip clearfix">
-					<div class="bnr_img">
-						<img class="changeimage" data-image='img/jpg/pc_vip.jpg' data-mimage='img/jpg/yd_vip.jpg'  />
-						<img class="vip_img" src="img/png/vip1.png"/>
-						<p class="p1">Your VIP level:VIP</p>
-						<p class="p2">Dear XXX, Welcome to Hot Beauty VIP Club.</p>
-					</div>
 					
-					<div class="text_1 clearfix">
-						<h1 class="vip_h1">VIP SYSTEM</h1>
-						<div class="pic clearfix" style="position: relative;">
-							<img src="img/jpg/vip1.jpg"/>
-							<span class="span1">$0</span>
-							<span class="span2">$20000</span>
-							<span class="span3">$50000</span>
-							<span class="span4">$100000</span>
-						</div>
-					</div>
-					
-					<div class="text_2 clearfix">
-						<h1 class="vip_h1">ORDER RECORD</h1>
-						<ul>
-							<li>
-								<span>Orders</span>
-								<span>Accumulated Amount</span>
-								<span>Amount Away From Next Level</span>
-							</li>
-							<li>
-								<span>0</span>
-								<span>$0.00</span>
-								<span>$500</span>
-							</li>
-						</ul>
-					</div>
-					
-					<div class="text_3 clearfix">
-						<h1 class="vip_h1">VIP MEMBER BENEFITS</h1>
-						<ul>
-							<li>
-								<span>Your Accumulated Amount</span>
-								<span>$0</span>
-								<span>$500</span>
-								<span>$5000</span>
-								<span>$10000</span>
-							</li>
-							<li>
-								<span>VIP Grade Benifits</span>
-								<span>VIP</span>
-								<span>Silver VIP</span>
-								<span>Gold VIP</span>
-								<span>Diamond VIP</span>
-							</li>
-							<li>
-								<span>20% Price Off</span>
-								<span class="active"></span>
-								<span class="active"></span>
-								<span class="active"></span>
-								<span class="active"></span>
-							</li>
-							<li>
-								<span>Upgrade Discount Price</span>
-								<span></span>
-								<span class="active"></span>
-								<span class="active"></span>
-								<span class="active"></span>
-							</li>
-							<li>
-								<span>Free Label Design</span>
-								<span></span>
-								<span class="active"></span>
-								<span class="active"></span>
-								<span class="active"></span>
-							</li>
-							<li>
-								<span>1000pcs Free Label</span>
-								<span></span>
-								<span></span>
-								<span class="active"></span>
-								<span class="active"></span>
-							</li>
-							<li>
-								<span>3000pcs Free Label</span>
-								<span></span>
-								<span></span>
-								<span></span>
-								<span class="active"></span>
-							</li>
-							<li>
-								<span>First Order Coupon $10</span>
-								<span class="active"></span>
-								<span class="active"></span>
-								<span class="active"></span>
-								<span class="active"></span>
-							</li>
-							<li>
-								<span>Upgrade Gifts</span>
-								<span></span>
-								<span class="active"></span>
-								<span class="active"></span>
-								<span class="active"></span>
-							</li>
-						</ul>
-					</div>
-					
-					<div class="text_4 clearfix">
-						<div class="div_text">
-							<p>Notes: </p>
-							<p>We will also offer you an upgrade gifts when you reached the certain level.</p>
-						
-							<ul>
-								<li>
-									<span>Silver VIP</span>
-									<span>1 free 4*4 Closure 10”</span>
-								</li>
-								<li>
-									<span>Gold VIP</span>
-									<span>2 free 4*4 Closure 12” or  1 free ear to ear 4*13 frontal</span>
-								</li>
-								<li>
-									<span>Diamond VIP</span>
-									<span>3 Bundles of 18” free Hair + 1 Free 4*4 Closure/frontal 14”or 1 free wig</span>
+					<div class="text  clearfix">
+						<div class="bg_fff">
+							<p class="form_p">* Required fields</p>
+							<form class="add_form clearfix">
+								<label for="">
+									<span>Frist Name *</span>
+									<input type="text" />
+									<p class="ts_ps">This field is required</p>
+								</label>
+								<label for="">
+									<span>Last Name *</span>
+									<input type="text" />
+									<p class="ts_ps">This field is required</p>
+								</label>
+								<label class="add_label" for="">
+									<span>Address *</span>
+									<input type="text" />
+									<input type="text" />
+									<p class="ts_ps">This field is required</p>
+								</label>
+								
+								<label for="">
+									<span>Country *</span>
+									<select name="">
+										<option value="">Country</option>
+										<option value="">Country</option>
+										<option value="">Country</option>
+										<option value="">Country</option>
+									</select>
+									<p class="ts_ps">This field is required</p>
+								</label>
+								<label for="">
+									<span>Post Code *</span>
+									<input type="text" />
+									<p class="ts_ps">This field is required</p>
+								</label>
+								<label for="">
+									<span>City *</span>
+									<input type="text" />
+									<p class="ts_ps">This field is required</p>
+								</label>
+								<label for="">
+									<span>State *</span>
+									<select name="">
+										<option value="">Select State</option>
+										<option value="">Select State</option>
+										<option value="">Select State</option>
+										<option value="">Select State</option>
+									</select>
+									<p class="ts_ps">This field is required</p>
+								</label>
+								<label for="">
+									<span>Phone *</span>
+									<input type="text" />
+									<p class="ts_ps">This field is required</p>
+								</label>
+								<button class="qx_btn" type="reset">cancel</button>
+								
+								<a class="btn240 clearfix clear" href="###">SAVE ADDRESS&nbsp;&nbsp;&nbsp;></a>
+							</form>
+							
+							
+							
+							<ul class="express_ul clearfix" style="padding-bottom: 2.91vw;">
+								<li style="border-bottom: 1px solid #ddd;padding: 2.08vw 0;" class="clearfix">
+									<dl>
+										<dt>Shipping Method</dt>
+										<dd>
+											<label for="" class="dx_label">
+												<input class="check_input" type="checkbox" />
+												<i class="check_i"></i>
+											</label>
+											<span>Nigeria Local Express </span>
+										</dd>
+									</dl>
+									<dl>
+										<dt>Expected delivery time</dt>
+										<dd>
+											<span>2-3 Working Days</span>
+										</dd>
+									</dl>
+									<dl>
+										<dt>Shipping Cost</dt>
+										<dd>
+											<span>$0.00</span>
+										</dd>
+									</dl>
 								</li>
 							</ul>
+							
+							<a class="btn240 type2" href="###">SAVW AND CONTINUE&nbsp;&nbsp;&nbsp;></a>
 						</div>
-					</div>
-					
-					<div class="text_5 clearfix">
-						<div class="div_text">
-							<h1 class="vip_h1">HOW DOES HOT BEAUTY HAIR'S VIP PROGRAM WORKS?</h1>
 						
-							<p class="p1_text">
-								Hot Beauty Hair's VIP program includes 4 stages and each stage will enjoy different price discount. Our system has 
-								the record of purchase history and we can calculate your VIP level according to how much you have spent.
+					</div>
+				</div>
+			
+				<div class="right right_shop clearfix">
+					<div class="bg_fff">
+						<h2>SUMMARY</h2>
+						<ul class="cart_ul">
+							<li class="clearfix">
+								<a href="###">
+									<div class="pic_img">
+										<img src="img/jpg/index1_1.jpg"/>
+									</div>
+									<div class="text">
+										<h2>Fuller Peruvian Virgin Hair </h2>
+		 								<p>Body Wavy</p>
+		 								<span>$15.39</span>
+									</div>
+								</a>
+							</li>
+							<li class="clearfix">
+								<a href="###">
+									<div class="pic_img">
+										<img src=""/>
+									</div>
+									<div class="text">
+										<h2>Fuller Peruvian Virgin Hair  </h2>
+		 								<p>Body Wavy</p>
+		 								<span>$15.39</span>
+									</div>
+								</a>
+							</li>
+							<li class="clearfix">
+								<a href="###">
+									<div class="pic_img">
+										<img src=""/>
+									</div>
+									<div class="text">
+										<h2>Fuller Peruvian Virgin Hair  </h2>
+		 								<p>Body Wavy</p>
+		 								<span>$15.39</span>
+									</div>
+								</a>
+							</li>
+							<li class="clearfix">
+								<a href="###">
+									<div class="pic_img">
+										<img src=""/>
+									</div>
+									<div class="text">
+										<h2>Fuller Peruvian Virgin Hair  </h2>
+		 								<p>Body Wavy</p>
+		 								<span>$15.39</span>
+									</div>
+								</a>
+							</li>
+						</ul>
+						<p class="p1">Shipping <span class="fr">$70.00</span></p>
+						<p class="p2">Total <span class="fr">$70.00</span></p>
+						<div class="shop_search">
+							<p>
+								If you have coupons, please fill them out. If not, 
+								please pay.
 							</p>
-							<ul>
-								<li><p><span>• VIP:</span> Register to get account.</p></li>
-								<li><p><span>• Silver VIP:</span> Accumulative spent over $500.</p></li>
-								<li><p><span>• Gold VIP:</span> Accumulative spent among $5,000.</p></li>
-								<li><p><span>• Diamond VIP:</span> Accumulative spent over $10,000.</p></li>
-							</ul>
-							<p class="p2_text">
-								<span>Notes:</span>
-								<span>if you have any questions,do not hesitate to send us an email to rebecca@hotbeautyhair.com.</span>
-							</p>
+							<label for="">
+								<input type="text" placeholder="coupon code"/>
+								<button>CONFIRM</button>
+							</label>
+						</div>
+						<div class="btn">
 						</div>
 					</div>
-					
 				</div>
-				
+			
 			</div>
-			
-			
 		</div>
-		
 		<!--返回顶部-->
 		<div class="xf_right">
 			<div class="vip"><a href="###"><span>VIP</span></a></div>
@@ -563,3 +584,26 @@
 	</body>
 </html>
 
+<script>
+	$(function(){
+		//单选
+		$(".dx_label input").click(function(){
+			if($(this).prop("checked")){
+				$(this).siblings(".check_i").addClass("active");
+				
+			}else{
+				$(this).siblings(".check_i").removeClass("active");
+			}
+		})
+		
+		$(".address_ul>li").click(function(){
+			$(this).addClass("active").siblings("li").removeClass("active");
+		})
+		
+		//搜索
+		$(".shop_search input").focus(function(){
+			$(".shop_search button").css("display","block");
+		})
+	})
+</script>
+		
