--- a/catalog/view/theme/default/x_pay1.html
+++ b/catalog/view/theme/default/x_pay1.html
@@ -8,7 +8,7 @@
 		<link rel="stylesheet" href="css/index.css" />
 		<script type="text/javascript" src="js/jquery.min.js" ></script>
 		<script type="text/javascript" src="js/common.js" ></script>
-		<title>Personal Center</title>
+		<title>PAY1</title>
 	</head>
 	<body>
 		<!--头部-->
@@ -210,176 +210,90 @@
 		</div>
 		<!--内容-->
 		
-		<div class=" in_content peo_center my_vip">
-			<div class="content clearfix">
-				
-				<div class="left clearfix">
-					<h1>MY ACCOUNT</h1>
-					<ol>
-						<li class="active"><a href="###">My Orders</a></li>
-						<li><a href="###">Account Information</a></li>
-						<li><a href="###">Address List</a></li>
-						<li><a href="###">My Shopping Cart</a></li>
-						<li><a href="###">My Wish List</a></li>
-						<li><a href="###">My VIP</a></li>
-						<li><a href="###">My Coupon</a></li>
-						<li><a href="###">Help Center</a></li>
-						<li><a href="###">Logout </a></li>
-					</ol>
-				</div>
-				
-				<div class="right m_vip clearfix">
-					<div class="bnr_img">
-						<img class="changeimage" data-image='img/jpg/pc_vip.jpg' data-mimage='img/jpg/yd_vip.jpg'  />
-						<img class="vip_img" src="img/png/vip1.png"/>
-						<p class="p1">Your VIP level:VIP</p>
-						<p class="p2">Dear XXX, Welcome to Hot Beauty VIP Club.</p>
+		<div class="pay">
+			<div class="content in_content clearfix">
+				<div class="pay_text clearfix">
+					<h1>your order has been placed successfully, please make payment now.</h1>
+					<p class="lv_p">Order Number:Hot 152774935124</p>
+					<table class="pay_tb1">
+						<tr>
+							<td><span>Sub-Total</span></td>
+							<td><span>$227.00</span></td>
+						</tr>
+						<tr>
+							<td><span>Nigeria Local Express (Weight: 610.00g)</span></td>
+							<td><span>$0.00</span></td>
+						</tr>
+						<tr>
+							<td><span>Total</span></td>
+							<td><span>$227.00</span></td>
+						</tr>
+					</table>
+					
+					<div class="text2 clearfix">
+						<h2>Please transfer to the following bank <i>NAIRA</i> account <span></span></h2>
+						<table class="pay_tb1 pay_tb2">
+							<tr>
+								<td><span>First Name: </span></td>
+								<td><span>ZUJIN</span></td>
+							</tr>
+							<tr>
+								<td><span>Last Name:</span></td>
+								<td><span>QIU</span></td>
+							</tr>
+							<tr>
+								<td><span>City:</span></td>
+								<td><span>Guangzhou</span></td>
+							</tr>
+							<tr>
+								<td><span>Country:</span></td>
+								<td><span>China</span></td>
+							</tr>
+							<tr>
+								<td><span>Address:</span></td>
+								<td>
+									<span>
+										No.6403 of No.6 Building, Jiahe Creative 
+										Industry Center ,NO.63 OF Huangbianbei 
+										Road,Baiyun District, Guangzhou, China
+									</span>
+								</td>
+							</tr>
+						</table>
+						<p>
+							Notice: After you completed the payment with bank, please kindly 
+							upload the bank receipt to our website and notify your salesman 
+						</p>
 					</div>
 					
-					<div class="text_1 clearfix">
-						<h1 class="vip_h1">VIP SYSTEM</h1>
-						<div class="pic clearfix" style="position: relative;">
-							<img src="img/jpg/vip1.jpg"/>
-							<span class="span1">$0</span>
-							<span class="span2">$20000</span>
-							<span class="span3">$50000</span>
-							<span class="span4">$100000</span>
-						</div>
-					</div>
-					
-					<div class="text_2 clearfix">
-						<h1 class="vip_h1">ORDER RECORD</h1>
-						<ul>
-							<li>
-								<span>Orders</span>
-								<span>Accumulated Amount</span>
-								<span>Amount Away From Next Level</span>
-							</li>
-							<li>
-								<span>0</span>
-								<span>$0.00</span>
-								<span>$500</span>
-							</li>
-						</ul>
-					</div>
-					
-					<div class="text_3 clearfix">
-						<h1 class="vip_h1">VIP MEMBER BENEFITS</h1>
-						<ul>
-							<li>
-								<span>Your Accumulated Amount</span>
-								<span>$0</span>
-								<span>$500</span>
-								<span>$5000</span>
-								<span>$10000</span>
-							</li>
-							<li>
-								<span>VIP Grade Benifits</span>
-								<span>VIP</span>
-								<span>Silver VIP</span>
-								<span>Gold VIP</span>
-								<span>Diamond VIP</span>
-							</li>
-							<li>
-								<span>20% Price Off</span>
-								<span class="active"></span>
-								<span class="active"></span>
-								<span class="active"></span>
-								<span class="active"></span>
-							</li>
-							<li>
-								<span>Upgrade Discount Price</span>
-								<span></span>
-								<span class="active"></span>
-								<span class="active"></span>
-								<span class="active"></span>
-							</li>
-							<li>
-								<span>Free Label Design</span>
-								<span></span>
-								<span class="active"></span>
-								<span class="active"></span>
-								<span class="active"></span>
-							</li>
-							<li>
-								<span>1000pcs Free Label</span>
-								<span></span>
-								<span></span>
-								<span class="active"></span>
-								<span class="active"></span>
-							</li>
-							<li>
-								<span>3000pcs Free Label</span>
-								<span></span>
-								<span></span>
-								<span></span>
-								<span class="active"></span>
-							</li>
-							<li>
-								<span>First Order Coupon $10</span>
-								<span class="active"></span>
-								<span class="active"></span>
-								<span class="active"></span>
-								<span class="active"></span>
-							</li>
-							<li>
-								<span>Upgrade Gifts</span>
-								<span></span>
-								<span class="active"></span>
-								<span class="active"></span>
-								<span class="active"></span>
-							</li>
-						</ul>
-					</div>
-					
-					<div class="text_4 clearfix">
-						<div class="div_text">
-							<p>Notes: </p>
-							<p>We will also offer you an upgrade gifts when you reached the certain level.</p>
-						
-							<ul>
-								<li>
-									<span>Silver VIP</span>
-									<span>1 free 4*4 Closure 10”</span>
-								</li>
-								<li>
-									<span>Gold VIP</span>
-									<span>2 free 4*4 Closure 12” or  1 free ear to ear 4*13 frontal</span>
-								</li>
-								<li>
-									<span>Diamond VIP</span>
-									<span>3 Bundles of 18” free Hair + 1 Free 4*4 Closure/frontal 14”or 1 free wig</span>
-								</li>
-							</ul>
-						</div>
-					</div>
-					
-					<div class="text_5 clearfix">
-						<div class="div_text">
-							<h1 class="vip_h1">HOW DOES HOT BEAUTY HAIR'S VIP PROGRAM WORKS?</h1>
-						
-							<p class="p1_text">
-								Hot Beauty Hair's VIP program includes 4 stages and each stage will enjoy different price discount. Our system has 
-								the record of purchase history and we can calculate your VIP level according to how much you have spent.
+					<div class="text3 clearfix">
+						<h2>Upload your bank receipt here <span></span></h2>
+						<div class="pd_div clearfix">
+							<p class="tsp_1">
+								Thanks for your payment, once we receive your money,<br /> 
+								your order will be arranged to ship in 48 working hours.
 							</p>
-							<ul>
-								<li><p><span>• VIP:</span> Register to get account.</p></li>
-								<li><p><span>• Silver VIP:</span> Accumulative spent over $500.</p></li>
-								<li><p><span>• Gold VIP:</span> Accumulative spent among $5,000.</p></li>
-								<li><p><span>• Diamond VIP:</span> Accumulative spent over $10,000.</p></li>
-							</ul>
-							<p class="p2_text">
-								<span>Notes:</span>
-								<span>if you have any questions,do not hesitate to send us an email to rebecca@hotbeautyhair.com.</span>
+							<div class="file_div">
+								<input type="file" name="uploadPicture" id="file" value="" title="上传照片" onchange="getphoto(this)" class="flie_in"/>
+								<img class="file_img" src="img/png/file.png"/>
+							</div>
+							<div class="text_div">
+								<img src="" alt="" />
+								<div class="close" onclick="del_img($(this))"></div>
+								<button class="tj_btn">SUBMIT</button>
+							</div>
+							<p class="tsp_2">
+								If upload error, please click the button to upload it again.
 							</p>
 						</div>
+						
 					</div>
 					
 				</div>
+				
+				
 				
 			</div>
-			
-			
 		</div>
 		
 		<!--返回顶部-->
@@ -562,4 +476,46 @@
 		
 	</body>
 </html>
-
+<script>
+		//调取上传框
+	    function getphoto(node) {
+	        var imgURL = "";
+	        try{
+	            var file = null;
+	            if(node.files && node.files[0] ){
+	                file = node.files[0];
+	            }else if(node.files && node.files.item(0)) {
+	                file = node.files.item(0);
+	            }
+	            try{
+	                imgURL =  file.getAsDataURL();
+	            }catch(e){
+	                imgRUL = window.URL.createObjectURL(file);
+	            }
+	        }catch(e){
+	            if (node.files && node.files[0]) {
+	                var reader = new FileReader();
+	                reader.onload = function (e) {
+	                    imgURL = e.target.result;
+	                };
+	                reader.readAsDataURL(node.files[0]);
+	            }
+	        }
+	        creatImg(imgRUL);
+	        $(".text_div").css("display","inline-block");
+	        $(".file_div").css("display","none");
+	        return imgURL;
+	    }
+	 
+	 	//上传选中的图片 显示页面
+	    function creatImg(imgRUL){
+	        $(".text_div img").attr("src",imgRUL);
+	    }
+		
+		//删除选中的图片
+		function del_img(obj){
+			obj.siblings("img").attr("src","");
+			obj.parent().css("display","none");
+			$(".file_div").css("display","block");
+		}
+</script>
