--- a/catalog/view/theme/default/x_zf_21.html
+++ b/catalog/view/theme/default/x_zf_21.html
@@ -8,12 +8,12 @@
 		<link rel="stylesheet" href="css/index.css" />
 		<script type="text/javascript" src="js/jquery.min.js" ></script>
 		<script type="text/javascript" src="js/common.js" ></script>
-		<title>Personal Center</title>
+		<title>SHIPPING METHOD</title>
 	</head>
 	<body>
 		<!--头部-->
 		<div class="big_nav">
-			<div class="nav content clearfix">
+			<div class="nav yd_hide content clearfix">
 				<!--货币切换-->
 				<div class="mn_type">
 					<div class="top clearfix">
@@ -207,180 +207,64 @@
 				
 			</div>
 		
+			<div class="new_nav pc_hide clearfix">
+				<a class="fh" href="###"></a>
+				<p>SHIPPING METHOD</p>
+			</div>
 		</div>
 		<!--内容-->
-		
-		<div class=" in_content peo_center my_vip">
-			<div class="content clearfix">
-				
-				<div class="left clearfix">
-					<h1>MY ACCOUNT</h1>
-					<ol>
-						<li class="active"><a href="###">My Orders</a></li>
-						<li><a href="###">Account Information</a></li>
-						<li><a href="###">Address List</a></li>
-						<li><a href="###">My Shopping Cart</a></li>
-						<li><a href="###">My Wish List</a></li>
-						<li><a href="###">My VIP</a></li>
-						<li><a href="###">My Coupon</a></li>
-						<li><a href="###">Help Center</a></li>
-						<li><a href="###">Logout </a></li>
-					</ol>
+		<div class="content in_content zf_21  new_in_content">
+			
+			<div class="zf_con clearfix">
+				<div class="zfbt clearfix">
+					<span>2</span>
+					<h1>Shipping Method</h1>
 				</div>
 				
-				<div class="right m_vip clearfix">
-					<div class="bnr_img">
-						<img class="changeimage" data-image='img/jpg/pc_vip.jpg' data-mimage='img/jpg/yd_vip.jpg'  />
-						<img class="vip_img" src="img/png/vip1.png"/>
-						<p class="p1">Your VIP level:VIP</p>
-						<p class="p2">Dear XXX, Welcome to Hot Beauty VIP Club.</p>
-					</div>
-					
-					<div class="text_1 clearfix">
-						<h1 class="vip_h1">VIP SYSTEM</h1>
-						<div class="pic clearfix" style="position: relative;">
-							<img src="img/jpg/vip1.jpg"/>
-							<span class="span1">$0</span>
-							<span class="span2">$20000</span>
-							<span class="span3">$50000</span>
-							<span class="span4">$100000</span>
-						</div>
-					</div>
-					
-					<div class="text_2 clearfix">
-						<h1 class="vip_h1">ORDER RECORD</h1>
-						<ul>
-							<li>
-								<span>Orders</span>
-								<span>Accumulated Amount</span>
-								<span>Amount Away From Next Level</span>
-							</li>
-							<li>
-								<span>0</span>
-								<span>$0.00</span>
-								<span>$500</span>
-							</li>
-						</ul>
-					</div>
-					
-					<div class="text_3 clearfix">
-						<h1 class="vip_h1">VIP MEMBER BENEFITS</h1>
-						<ul>
-							<li>
-								<span>Your Accumulated Amount</span>
-								<span>$0</span>
-								<span>$500</span>
-								<span>$5000</span>
-								<span>$10000</span>
-							</li>
-							<li>
-								<span>VIP Grade Benifits</span>
-								<span>VIP</span>
-								<span>Silver VIP</span>
-								<span>Gold VIP</span>
-								<span>Diamond VIP</span>
-							</li>
-							<li>
-								<span>20% Price Off</span>
-								<span class="active"></span>
-								<span class="active"></span>
-								<span class="active"></span>
-								<span class="active"></span>
-							</li>
-							<li>
-								<span>Upgrade Discount Price</span>
-								<span></span>
-								<span class="active"></span>
-								<span class="active"></span>
-								<span class="active"></span>
-							</li>
-							<li>
-								<span>Free Label Design</span>
-								<span></span>
-								<span class="active"></span>
-								<span class="active"></span>
-								<span class="active"></span>
-							</li>
-							<li>
-								<span>1000pcs Free Label</span>
-								<span></span>
-								<span></span>
-								<span class="active"></span>
-								<span class="active"></span>
-							</li>
-							<li>
-								<span>3000pcs Free Label</span>
-								<span></span>
-								<span></span>
-								<span></span>
-								<span class="active"></span>
-							</li>
-							<li>
-								<span>First Order Coupon $10</span>
-								<span class="active"></span>
-								<span class="active"></span>
-								<span class="active"></span>
-								<span class="active"></span>
-							</li>
-							<li>
-								<span>Upgrade Gifts</span>
-								<span></span>
-								<span class="active"></span>
-								<span class="active"></span>
-								<span class="active"></span>
-							</li>
-						</ul>
-					</div>
-					
-					<div class="text_4 clearfix">
-						<div class="div_text">
-							<p>Notes: </p>
-							<p>We will also offer you an upgrade gifts when you reached the certain level.</p>
-						
-							<ul>
-								<li>
-									<span>Silver VIP</span>
-									<span>1 free 4*4 Closure 10”</span>
-								</li>
-								<li>
-									<span>Gold VIP</span>
-									<span>2 free 4*4 Closure 12” or  1 free ear to ear 4*13 frontal</span>
-								</li>
-								<li>
-									<span>Diamond VIP</span>
-									<span>3 Bundles of 18” free Hair + 1 Free 4*4 Closure/frontal 14”or 1 free wig</span>
-								</li>
-							</ul>
-						</div>
-					</div>
-					
-					<div class="text_5 clearfix">
-						<div class="div_text">
-							<h1 class="vip_h1">HOW DOES HOT BEAUTY HAIR'S VIP PROGRAM WORKS?</h1>
-						
-							<p class="p1_text">
-								Hot Beauty Hair's VIP program includes 4 stages and each stage will enjoy different price discount. Our system has 
-								the record of purchase history and we can calculate your VIP level according to how much you have spent.
-							</p>
-							<ul>
-								<li><p><span>• VIP:</span> Register to get account.</p></li>
-								<li><p><span>• Silver VIP:</span> Accumulative spent over $500.</p></li>
-								<li><p><span>• Gold VIP:</span> Accumulative spent among $5,000.</p></li>
-								<li><p><span>• Diamond VIP:</span> Accumulative spent over $10,000.</p></li>
-							</ul>
-							<p class="p2_text">
-								<span>Notes:</span>
-								<span>if you have any questions,do not hesitate to send us an email to rebecca@hotbeautyhair.com.</span>
-							</p>
-						</div>
-					</div>
-					
-				</div>
+				<ul class="pay_ul clearfix">
+					<li class=" clearfix">
+						<span>Shipping Method</span>
+						<label class="gx clearfix" for="">
+							<img src="img/png/new_9.png" alt="" />
+							<p>FEDEX EXPRESS 6  (Weight: 320.00g) </p>
+						</label>
+						<p class="ts_p">Please Select Shipping Method</p>
+						<hr />
+						<span>Expected delivery time</span>
+						<label class="clearfix" for="">
+							<p>2-3 Working Days (48-72 Hours)</p>
+						</label>
+						<hr />
+						<span>Shipping Cost</span>
+						<label class="red clearfix" for="">
+							<p>$24.00</p>
+						</label>
+					</li>
+					<li class="clearfix">
+						<span>Shipping Method</span>
+						<label class="gx clearfix" for="">
+							<img src="img/jpg/new.jpg" alt="" />
+							<p>DHL EXPRESS 6  (Weight: 320.00g) </p>
+						</label>
+						<p class="ts_p">Please Select Shipping Method</p>
+						<hr />
+						<span>Expected delivery time</span>
+						<label class="clearfix" for="">
+							<p>2-3 Working Days (48-72 Hours)</p>
+						</label>
+						<hr />
+						<span>Shipping Cost</span>
+						<label class="red clearfix" for="">
+							<p>$24.00</p>
+						</label>
+					</li>
+				</ul>
+				
+				<a class="tj_a" href="###">SAVE & CONTINUE</a>
 				
 			</div>
-			
-			
 		</div>
+		
 		
 		<!--返回顶部-->
 		<div class="xf_right">
@@ -445,7 +329,7 @@
 		</div>
 		
 		<!--yd底部-->
-		<div class="yd_footer clearfix">
+		<div class="yd_footer hide clearfix">
 			<div class="top">
 				<ul class="ul_ydfot clearfix">
 					<li>
@@ -515,7 +399,7 @@
 			</div>
 			<p class="clearfix">Copyright Notice &copy; 2016-2018 www.hotbeautyhairmall.com All rights reserved</p>
 		</div>
-		<div class="yd_footer2">
+		<div class="yd_footer2 hide">
 			<ol class="ol_ydfot clearfix">
 				<li class="active">
 					<a href="###">
@@ -562,4 +446,28 @@
 		
 	</body>
 </html>
-
+<script type="text/javascript">
+	$(function(){
+//		支付方式选择
+		$(".pay_ul>li").click(function(){
+			$(this).addClass("active").siblings().removeClass("active");
+			$(".pay_ul>li .ts_p").hide();
+		})
+		
+		//提交
+		$(".tj_a").click(function(){
+			var i=0;
+			var len = $(".pay_ul>li").length;
+			$(".pay_ul>li").each(function(){
+				if($(this).hasClass("active")){
+					//执行提交后的事件
+				}else{
+					i++;
+					if(i==len){
+						tips('Please Select Shipping Method','gantan')
+					}
+				}
+			})
+		})
+	})
+</script>
