--- a/catalog/view/theme/default/zf_xuanz_fangshi.html
+++ b/catalog/view/theme/default/zf_xuanz_fangshi.html
@@ -8,12 +8,12 @@
 		<link rel="stylesheet" href="css/index.css" />
 		<script type="text/javascript" src="js/jquery.min.js" ></script>
 		<script type="text/javascript" src="js/common.js" ></script>
-		<title>Personal Center</title>
+		<title>PAYMENT METHOD</title>
 	</head>
 	<body>
 		<!--头部-->
 		<div class="big_nav">
-			<div class="nav content clearfix">
+			<div class="nav yd_hide content clearfix">
 				<!--货币切换-->
 				<div class="mn_type">
 					<div class="top clearfix">
@@ -207,179 +207,196 @@
 				
 			</div>
 		
+			<div class="new_nav pc_hide clearfix">
+				<a class="fh" href="###"></a>
+				<p>PAYMENT METHOD</p>
+			</div>
 		</div>
 		<!--内容-->
-		
-		<div class=" in_content peo_center my_vip">
-			<div class="content clearfix">
-				
-				<div class="left clearfix">
-					<h1>MY ACCOUNT</h1>
-					<ol>
-						<li class="active"><a href="###">My Orders</a></li>
-						<li><a href="###">Account Information</a></li>
-						<li><a href="###">Address List</a></li>
-						<li><a href="###">My Shopping Cart</a></li>
-						<li><a href="###">My Wish List</a></li>
-						<li><a href="###">My VIP</a></li>
-						<li><a href="###">My Coupon</a></li>
-						<li><a href="###">Help Center</a></li>
-						<li><a href="###">Logout </a></li>
-					</ol>
+		<div class="content in_content zf_3  new_in_content pc_hide clearfix">
+			<div class="zf_con clearfix">
+				<div class="zfbt clearfix">
+					<span>3</span>
+					<h1>Payment Method</h1>
 				</div>
 				
-				<div class="right m_vip clearfix">
-					<div class="bnr_img">
-						<img class="changeimage" data-image='img/jpg/pc_vip.jpg' data-mimage='img/jpg/yd_vip.jpg'  />
-						<img class="vip_img" src="img/png/vip1.png"/>
-						<p class="p1">Your VIP level:VIP</p>
-						<p class="p2">Dear XXX, Welcome to Hot Beauty VIP Club.</p>
-					</div>
+				<ul class="pay_ul clearfix">
+					<li class=" clearfix">
+						<label class="gx clearfix" for="">
+							<p>Naira Account </p>
+						</label>
+					</li>
+					<li class=" clearfix">
+						<label class="gx clearfix" for="">
+							<p>PayPal</p>
+						</label>
+					</li>
+					<li class=" clearfix">
+						<label class="gx clearfix" for="">
+							<p>Credit Card</p>
+						</label>
+					</li>
+					<li class=" clearfix">
+						<label class="gx clearfix" for="">
+							<p>Western Union </p>
+						</label>
+					</li>
+					<li class=" clearfix">
+						<label class="gx clearfix" for="">
+							<p>Money Gram</p>
+						</label>
+					</li>
+					<li class=" clearfix">
+						<label class="gx clearfix" for="">
+							<p>Bank Transfer</p>
+						</label>
+					</li>
+					<li class=" clearfix">
+						<label class="gx clearfix" for="">
+							<p>Bank Transfer</p>
+						</label>
+					</li>
+				</ul>
+				
+				<div class="bot clearfix">
+					<p>If you have coupons, please put  the code in. If not, please submit the order directly.</p>
+					<label class="clearfix" for="">
+						<input type="text" placeholder="Coupon Code" />
+						<button class="qd_btn">CONFIRM</button>
+					</label>
 					
-					<div class="text_1 clearfix">
-						<h1 class="vip_h1">VIP SYSTEM</h1>
-						<div class="pic clearfix" style="position: relative;">
-							<img src="img/jpg/vip1.jpg"/>
-							<span class="span1">$0</span>
-							<span class="span2">$20000</span>
-							<span class="span3">$50000</span>
-							<span class="span4">$100000</span>
-						</div>
-					</div>
-					
-					<div class="text_2 clearfix">
-						<h1 class="vip_h1">ORDER RECORD</h1>
-						<ul>
-							<li>
-								<span>Orders</span>
-								<span>Accumulated Amount</span>
-								<span>Amount Away From Next Level</span>
-							</li>
-							<li>
-								<span>0</span>
-								<span>$0.00</span>
-								<span>$500</span>
-							</li>
-						</ul>
-					</div>
-					
-					<div class="text_3 clearfix">
-						<h1 class="vip_h1">VIP MEMBER BENEFITS</h1>
-						<ul>
-							<li>
-								<span>Your Accumulated Amount</span>
-								<span>$0</span>
-								<span>$500</span>
-								<span>$5000</span>
-								<span>$10000</span>
-							</li>
-							<li>
-								<span>VIP Grade Benifits</span>
-								<span>VIP</span>
-								<span>Silver VIP</span>
-								<span>Gold VIP</span>
-								<span>Diamond VIP</span>
-							</li>
-							<li>
-								<span>20% Price Off</span>
-								<span class="active"></span>
-								<span class="active"></span>
-								<span class="active"></span>
-								<span class="active"></span>
-							</li>
-							<li>
-								<span>Upgrade Discount Price</span>
-								<span></span>
-								<span class="active"></span>
-								<span class="active"></span>
-								<span class="active"></span>
-							</li>
-							<li>
-								<span>Free Label Design</span>
-								<span></span>
-								<span class="active"></span>
-								<span class="active"></span>
-								<span class="active"></span>
-							</li>
-							<li>
-								<span>1000pcs Free Label</span>
-								<span></span>
-								<span></span>
-								<span class="active"></span>
-								<span class="active"></span>
-							</li>
-							<li>
-								<span>3000pcs Free Label</span>
-								<span></span>
-								<span></span>
-								<span></span>
-								<span class="active"></span>
-							</li>
-							<li>
-								<span>First Order Coupon $10</span>
-								<span class="active"></span>
-								<span class="active"></span>
-								<span class="active"></span>
-								<span class="active"></span>
-							</li>
-							<li>
-								<span>Upgrade Gifts</span>
-								<span></span>
-								<span class="active"></span>
-								<span class="active"></span>
-								<span class="active"></span>
-							</li>
-						</ul>
-					</div>
-					
-					<div class="text_4 clearfix">
-						<div class="div_text">
-							<p>Notes: </p>
-							<p>We will also offer you an upgrade gifts when you reached the certain level.</p>
-						
-							<ul>
-								<li>
-									<span>Silver VIP</span>
-									<span>1 free 4*4 Closure 10”</span>
-								</li>
-								<li>
-									<span>Gold VIP</span>
-									<span>2 free 4*4 Closure 12” or  1 free ear to ear 4*13 frontal</span>
-								</li>
-								<li>
-									<span>Diamond VIP</span>
-									<span>3 Bundles of 18” free Hair + 1 Free 4*4 Closure/frontal 14”or 1 free wig</span>
-								</li>
-							</ul>
-						</div>
-					</div>
-					
-					<div class="text_5 clearfix">
-						<div class="div_text">
-							<h1 class="vip_h1">HOW DOES HOT BEAUTY HAIR'S VIP PROGRAM WORKS?</h1>
-						
-							<p class="p1_text">
-								Hot Beauty Hair's VIP program includes 4 stages and each stage will enjoy different price discount. Our system has 
-								the record of purchase history and we can calculate your VIP level according to how much you have spent.
-							</p>
-							<ul>
-								<li><p><span>• VIP:</span> Register to get account.</p></li>
-								<li><p><span>• Silver VIP:</span> Accumulative spent over $500.</p></li>
-								<li><p><span>• Gold VIP:</span> Accumulative spent among $5,000.</p></li>
-								<li><p><span>• Diamond VIP:</span> Accumulative spent over $10,000.</p></li>
-							</ul>
-							<p class="p2_text">
-								<span>Notes:</span>
-								<span>if you have any questions,do not hesitate to send us an email to rebecca@hotbeautyhair.com.</span>
-							</p>
-						</div>
-					</div>
-					
+				</div>
+				
+				<div class="total clearfix">
+					<p>Total: <span>$119.59</span></p>
+					<a class="tj_btn" href="###">SUBMIT THE ORDER</a>
 				</div>
 				
 			</div>
+		</div>
+		
+		<div class="address  yd_hide clearfix">
+			<div class="content in_content address_content clearfix">
+				<div class="left clearfix">
+					<div class="text clearfix">
+						<div class="bg_fff">
+							<h2><span>3</span>Select a payment method</h2>
+							<ul class="pay_ul clearfix">
+								<li class=" clearfix">
+									<label class="gx clearfix" for="">
+										<p>Naira Account </p>
+									</label>
+								</li>
+								<li class=" clearfix">
+									<label class="gx clearfix" for="">
+										<p>PayPal</p>
+									</label>
+								</li>
+								<li class=" clearfix">
+									<label class="gx clearfix" for="">
+										<p>Credit Card</p>
+									</label>
+								</li>
+								<li class=" clearfix">
+									<label class="gx clearfix" for="">
+										<p>Western Union </p>
+									</label>
+								</li>
+								<li class=" clearfix">
+									<label class="gx clearfix" for="">
+										<p>Money Gram</p>
+									</label>
+								</li>
+								<li class=" clearfix">
+									<label class="gx clearfix" for="">
+										<p>Bank Transfer</p>
+									</label>
+								</li>
+								<li class=" clearfix">
+									<label class="gx clearfix" for="">
+										<p>Bank Transfer</p>
+									</label>
+								</li>
+							</ul>
+						</div>
+						<a class="btn240 zf3_btn" href="###">SUBMIT THE ORDER</a>
+					</div>
+					
+				</div>
+				<div class="right right_shop clearfix">
+					<h2>SUMMARY</h2>
+					<ul class="cart_ul">
+						<li class="clearfix">
+							<a href="###">
+								<div class="pic_img">
+									<img src="img/jpg/index1_1.jpg"/>
+								</div>
+								<div class="text">
+									<h2>Fuller Peruvian Virgin Hair </h2>
+	 								<p>Body Wavy</p>
+	 								<span>$15.39</span>
+								</div>
+							</a>
+						</li>
+						<li class="clearfix">
+							<a href="###">
+								<div class="pic_img">
+									<img src=""/>
+								</div>
+								<div class="text">
+									<h2>Fuller Peruvian Virgin Hair  </h2>
+	 								<p>Body Wavy</p>
+	 								<span>$15.39</span>
+								</div>
+							</a>
+						</li>
+						<li class="clearfix">
+							<a href="###">
+								<div class="pic_img">
+									<img src=""/>
+								</div>
+								<div class="text">
+									<h2>Fuller Peruvian Virgin Hair  </h2>
+	 								<p>Body Wavy</p>
+	 								<span>$15.39</span>
+								</div>
+							</a>
+						</li>
+						<li class="clearfix">
+							<a href="###">
+								<div class="pic_img">
+									<img src=""/>
+								</div>
+								<div class="text">
+									<h2>Fuller Peruvian Virgin Hair  </h2>
+	 								<p>Body Wavy</p>
+	 								<span>$15.39</span>
+								</div>
+							</a>
+						</li>
+					</ul>
+					
+					<p class="p1">Shipping <span class="fr">$70.00</span></p>
+					<p class="p2">Total <span class="fr">$70.00</span></p>
+					<div class="shop_search">
+						<p>
+							If you have coupons, please put  the code in. If not, please submit the order directly.
+						</p>
+						<label for="">
+							<input type="text" placeholder="coupon code"/>
+							<button>CONFIRM</button>
+						</label>
+					</div>
+					<div class="btn">
+						<span>Buyer Message:</span>
+						<label for="">
+							<input type="text" placeholder="Please leave a message if necessary"/>
+							<button>CONFIRM</button>
+						</label>
+					</div>
+				</div>
 			
-			
+			</div>
 		</div>
 		
 		<!--返回顶部-->
@@ -445,7 +462,7 @@
 		</div>
 		
 		<!--yd底部-->
-		<div class="yd_footer clearfix">
+		<div class="yd_footer hide clearfix">
 			<div class="top">
 				<ul class="ul_ydfot clearfix">
 					<li>
@@ -515,7 +532,7 @@
 			</div>
 			<p class="clearfix">Copyright Notice &copy; 2016-2018 www.hotbeautyhairmall.com All rights reserved</p>
 		</div>
-		<div class="yd_footer2">
+		<div class="yd_footer2 hide">
 			<ol class="ol_ydfot clearfix">
 				<li class="active">
 					<a href="###">
@@ -562,4 +579,33 @@
 		
 	</body>
 </html>
-
+<script type="text/javascript">
+	$(function(){
+//		支付方式选择
+		$(".pay_ul>li").click(function(){
+			$(this).addClass("active").siblings().removeClass("active");
+			$(".pay_ul>li .ts_p").hide();
+		})
+		
+		$(".bot input").focus(function(){
+			$(this).siblings(".qd_btn").css("display","block");
+		})
+		
+		
+		//提交
+		$(".total .tj_btn").click(function(){
+			var i=0;
+			var len = $(".pay_ul>li").length;
+			$(".pay_ul>li").each(function(){
+				if($(this).hasClass("active")){
+					//执行提交后的事件
+				}else{
+					i++;
+					if(i==len){
+						tips('Please Select Shipping Method','gantan')
+					}
+				}
+			})
+		})
+	})
+</script>
